Change Colors (fix contrasts)

--- a/src/style/tarifas.css
+++ b/src/style/tarifas.css
@@ -41,7 +41,7 @@
             .Pack > header > p {
                 font-weight: bold;
                 text-align: center;
-                text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); 
+                text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
             }
 
         .Pack > .body {
@@ -57,7 +57,7 @@
                 align-items: center;
                 justify-content: center;
                 text-align: center;
-                color: grey;
+                color: black;
             }
 
             .Pack > .body > .offers {
@@ -87,7 +87,7 @@
 
                 .Pack > .body > .price > .note {
                     font-size: 14px;
-                    color: grey;
+                    color: black;
                 }
 
 #check > .info {
